--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
+	"author": "Avunu LLC",
 	"description": "Google Sheets / Apps Script Framework",
 	"license": "MIT",
 	"main": "index.js",
 	"name": "gass",
 	"private": false,
-	"repository": "Avunu/gass",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Avunu/gass.git"
+	},
 	"scripts": {
 		"build": "rolldown --config rollup.config.js"
 	},
 	"type": "module",
-	"version": "0.0.1"
+	"version": "0.0.1",
+	"devDependencies": {
+		"@types/google-apps-script": "^1.0.99",
+		"rolldown": "^1.0.0-beta.32"
+	}
 }
